--- a/mysite/BP/templates/BP/about.html
+++ b/mysite/BP/templates/BP/about.html
@@ -5,19 +5,16 @@
 
 {% block content %}
 <link href='http://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="{% static 'BP/css/about.css' %}">
-<script src="js/about.js"></script>
+<!-- <link rel="stylesheet" href="{% static 'BP/css/about.css' %}">
+<script src="js/about.js"></script> -->
 
-<header>
+<!-- <header> -->
   <h1>About BluePages</h1>
   <h3>
     BluePages is the digital hub for student ventures 
   </h3>
-  <h3>
-  	Scroll down to learn more
-  </h3>
-</header>
-
+<!-- </header>
+ -->
 
 <section class="main">
 <a class="arrow-wrap" href="#content">
