--- a/mysite/BP/templates/BP/base.html
+++ b/mysite/BP/templates/BP/base.html
@@ -314,7 +314,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="{% url 'BP:index' %}"><i class="fa fa-dashboard fa-fw"></i> Search</a>
+                            <a href="{% url 'BP:index' %}"><i class="fa fa-dashboard fa-fw"></i> Job Search</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
@@ -329,10 +329,10 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="{% static 'BP/bootstrap/pages/tables.html' %}"><i class="fa fa-table fa-fw"></i> Directory </a>
+                            <a href="{% url 'BP:directory' %}"><i class="fa fa-table fa-fw"></i> Student Directory </a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                            <a href="{% url 'BP:about' %}"><i class="fa fa-edit fa-fw"></i> About </a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
