--- a/mysite/BP/templates/BP/about.html
+++ b/mysite/BP/templates/BP/about.html
@@ -21,10 +21,10 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-comments fa-5x"></i>
+                                    <i class="fa fa-briefcase fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">26</div>
+                                    <div class="huge">{{company_count}}</div>
                                     <div>Startups</div>
                                 </div>
                             </div>
@@ -43,11 +43,11 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-tasks fa-5x"></i>
+                                    <i class="fa fa-users fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">12</div>
-                                    <div> Registered Students </div>
+                                    <div class="huge">{{student_count}}</div>
+                                    <div> Student Users </div>
                                 </div>
                             </div>
                         </div>
@@ -65,10 +65,10 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-shopping-cart fa-5x"></i>
+                                    <i class="fa fa-send fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">124</div>
+                                    <div class="huge">{{posting_count}}</div>
                                     <div>Job Postings </div>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-support fa-5x"></i>
+                                    <i class="fa fa-university fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">1</div>
@@ -106,26 +106,16 @@
                 </div>
             </div>
 
-<!-- <header> -->
-  <h1>About BluePages</h1>
-  <h3>
-    BluePages is the digital hub for student ventures 
-  </h3>
-<!-- </header>
- -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="jumbotron">
+                        <h1>About BluePages</h1>
+                        <p>BluePages is the digital hub for student ventures, built in 2017 to help stimulate the entrepreneurial college community. Piloted at Yale University, the platform seeks to provide the tools and serviecs needed by student entrepreneurs to achieve their dreams and aspirations</p>
+                        <p><a class="btn btn-primary btn-lg" role="button" href="{% url 'BP:index' %}">Browse Platform</a>
+                        </p>
+                    </div>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
 
-<section class="main">
-<a class="arrow-wrap" href="#content">
-<span class="arrow"></span>
-</a>
-  
-  <div class="content" id="content">
-    <h1> Welcome! </h1>
-    <p>
-      BluePages was created in 2017 to help stimulate the entrepreneurial college community. Piloted at Yale University,
-      the digital platform seeks to provide the tools and services needed by student entrepreneurs to achieve their dreams
-      and aspirations.
-    </p>
-  </div> 
-</section>
 {% endblock %}
