--- a/mysite/BP/templates/BP/submit_post.html
+++ b/mysite/BP/templates/BP/submit_post.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <center>
-    <h1>New post</h1>
+    <h1>Submit New Job</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
